--- a/journal-vue/package.json
+++ b/journal-vue/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.0.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
