--- a/journal-t/package.json
+++ b/journal-t/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@vercel/analytics": "^0.1.11",
     "dayjs": "^1.11.7",
     "nanoid": "^4.0.2",
     "next": "^13.2.4",
